// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WeatherWidget > открывает поповер по клику на триггер 1`] = `
<body>
  <div>
    <span
      aria-describedby="id"
      class="ant-popover-open"
      style="display: inline-flex;"
    >
      <button
        aria-label="Погода: ⛅ +18°, Переменная облачность"
        class="ant-btn ant-btn-text ant-btn-color-default ant-btn-variant-text"
        style="color: rgb(255, 255, 255); height: 40px; padding-inline: 8px;"
        type="button"
      >
        <div
          class="ant-flex"
          style="gap: 8px;"
        >
          <span
            aria-hidden="true"
          >
            ⛅
          </span>
          <span>
            +18°
          </span>
          <span
            class="weather-widget-condition"
          >
            Переменная облачность
          </span>
        </div>
      </button>
    </span>
  </div>
  <div
    class="ant-popover ant-zoom-big ant-popover-placement-bottomRight"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
  >
    <div
      class="ant-popover-arrow"
      style="position: absolute;"
    />
    <div
      class="ant-popover-content"
    >
      <div
        class="ant-popover-inner"
        id="id"
        role="tooltip"
      >
        <div
          class="ant-popover-title"
        >
          Москва
        </div>
        <div
          class="ant-popover-inner-content"
        >
          <div
            class="weather-popover ant-flex ant-flex-align-stretch ant-flex-vertical"
            style="gap: 12px;"
          >
            <span
              class="ant-input-group-wrapper ant-input-group-wrapper-outlined ant-input-search"
            >
              <span
                class="ant-input-wrapper ant-input-group"
              >
                <span
                  class="ant-input-affix-wrapper ant-input-outlined"
                >
                  <input
                    class="ant-input"
                    placeholder="Город"
                    type="search"
                    value="Москва"
                  />
                  <span
                    class="ant-input-suffix"
                  >
                    <button
                      class="ant-input-clear-icon"
                      tabindex="-1"
                      type="button"
                    >
                      <span
                        aria-label="close-circle"
                        class="anticon anticon-close-circle"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="close-circle"
                          fill="currentColor"
                          fill-rule="evenodd"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
                <span
                  class="ant-input-group-addon"
                >
                  <button
                    class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-icon-only ant-input-search-button"
                    type="button"
                  >
                    <span
                      class="ant-btn-icon"
                    >
                      <span
                        aria-label="search"
                        class="anticon anticon-search"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="search"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                          />
                        </svg>
                      </span>
                    </span>
                  </button>
                </span>
              </span>
            </span>
            <button
              class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-sm ant-btn-block"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <span
                  aria-label="aim"
                  class="anticon anticon-aim"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="aim"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M952 474H829.8C812.5 327.6 696.4 211.5 550 194.2V72c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v122.2C327.6 211.5 211.5 327.6 194.2 474H72c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h122.2C211.5 696.4 327.6 812.5 474 829.8V952c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V829.8C696.4 812.5 812.5 696.4 829.8 550H952c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8zM512 756c-134.8 0-244-109.2-244-244s109.2-244 244-244 244 109.2 244 244-109.2 244-244 244z"
                    />
                    <path
                      d="M512 392c-32.1 0-62.1 12.4-84.8 35.2-22.7 22.7-35.2 52.7-35.2 84.8s12.5 62.1 35.2 84.8C449.9 619.4 480 632 512 632s62.1-12.5 84.8-35.2C619.4 574.1 632 544 632 512s-12.5-62.1-35.2-84.8A118.57 118.57 0 00512 392z"
                    />
                  </svg>
                </span>
              </span>
              <span>
                Моё местоположение
              </span>
            </button>
            <div
              class="ant-flex ant-flex-align-stretch ant-flex-vertical"
              style="gap: 6px;"
            >
              <div
                class="weather-forecast"
              >
                <div
                  class="weather-forecast-row"
                >
                  <span
                    class="ant-typography weather-forecast-date"
                  >
                    вт
                    , 
                    22.09
                  </span>
                  <span
                    class="ant-typography weather-forecast-condition"
                  >
                    <span
                      aria-hidden="true"
                      class="weather-forecast-emoji"
                    >
                      ⛅
                    </span>
                    <span
                      class="weather-forecast-label"
                    >
                      Переменная облачность
                    </span>
                  </span>
                  <span
                    class="ant-typography weather-forecast-temp"
                  >
                    -2° / +19°
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`WeatherWidget > показывает заметки, прогноз, ошибку и вызывает действия 1`] = `
<div>
  <div
    class="weather-popover ant-flex ant-flex-align-stretch ant-flex-vertical"
    style="gap: 12px;"
  >
    <span
      class="ant-input-group-wrapper ant-input-group-wrapper-outlined ant-input-search"
    >
      <span
        class="ant-input-wrapper ant-input-group"
      >
        <span
          class="ant-input-affix-wrapper ant-input-outlined"
        >
          <input
            class="ant-input"
            placeholder="Город"
            type="search"
            value="Москва"
          />
          <span
            class="ant-input-suffix"
          >
            <button
              class="ant-input-clear-icon"
              tabindex="-1"
              type="button"
            >
              <span
                aria-label="close-circle"
                class="anticon anticon-close-circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="close-circle"
                  fill="currentColor"
                  fill-rule="evenodd"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
                  />
                </svg>
              </span>
            </button>
          </span>
        </span>
        <span
          class="ant-input-group-addon"
        >
          <button
            class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-icon-only ant-input-search-button"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <span
                aria-label="search"
                class="anticon anticon-search"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="search"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                  />
                </svg>
              </span>
            </span>
          </button>
        </span>
      </span>
    </span>
    <button
      class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-sm ant-btn-block"
      type="button"
    >
      <span
        class="ant-btn-icon"
      >
        <span
          aria-label="aim"
          class="anticon anticon-aim"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="aim"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M952 474H829.8C812.5 327.6 696.4 211.5 550 194.2V72c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v122.2C327.6 211.5 211.5 327.6 194.2 474H72c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h122.2C211.5 696.4 327.6 812.5 474 829.8V952c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V829.8C696.4 812.5 812.5 696.4 829.8 550H952c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8zM512 756c-134.8 0-244-109.2-244-244s109.2-244 244-244 244 109.2 244 244-109.2 244-244 244z"
            />
            <path
              d="M512 392c-32.1 0-62.1 12.4-84.8 35.2-22.7 22.7-35.2 52.7-35.2 84.8s12.5 62.1 35.2 84.8C449.9 619.4 480 632 512 632s62.1-12.5 84.8-35.2C619.4 574.1 632 544 632 512s-12.5-62.1-35.2-84.8A118.57 118.57 0 00512 392z"
            />
          </svg>
        </span>
      </span>
      <span>
        Моё местоположение
      </span>
    </button>
    <div
      class="ant-flex ant-flex-justify-space-between"
      style="gap: 8px;"
    >
      <span
        class="ant-typography ant-typography-danger"
      >
        Нет сети
      </span>
      <button
        class="ant-btn ant-btn-link ant-btn-color-link ant-btn-variant-link ant-btn-sm"
        type="button"
      >
        <span>
          Повторить
        </span>
      </button>
    </div>
    <div
      class="ant-flex ant-flex-align-stretch ant-flex-vertical"
      style="gap: 6px;"
    >
      <span
        class="ant-typography ant-typography-secondary"
      >
        Отопительный сезон: комнатные сохнут быстрее
      </span>
      <span
        class="ant-typography ant-typography-secondary"
      >
        Жара: земля сохнет быстрее
      </span>
      <span
        class="ant-typography ant-typography-secondary"
      >
        На неделе осадки: уличным можно поливать позже
      </span>
      <div
        class="weather-forecast"
      >
        <div
          class="weather-forecast-row"
        >
          <span
            class="ant-typography weather-forecast-date"
          >
            вт
            , 
            22.09
          </span>
          <span
            class="ant-typography weather-forecast-condition"
          >
            <span
              aria-hidden="true"
              class="weather-forecast-emoji"
            >
              ⛅
            </span>
            <span
              class="weather-forecast-label"
            >
              Переменная облачность
            </span>
          </span>
          <span
            class="ant-typography weather-forecast-temp"
          >
            -2° / +19°
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WeatherWidget > показывает заметки, прогноз, ошибку и вызывает действия 2`] = `
<div>
  <div
    class="weather-popover ant-flex ant-flex-align-stretch ant-flex-vertical"
    style="gap: 12px;"
  >
    <span
      class="ant-input-group-wrapper ant-input-group-wrapper-outlined ant-input-search"
    >
      <span
        class="ant-input-wrapper ant-input-group"
      >
        <span
          class="ant-input-affix-wrapper ant-input-outlined"
        >
          <input
            class="ant-input"
            placeholder="Город"
            type="search"
            value=""
          />
          <span
            class="ant-input-suffix"
          >
            <button
              class="ant-input-clear-icon ant-input-clear-icon-hidden"
              tabindex="-1"
              type="button"
            >
              <span
                aria-label="close-circle"
                class="anticon anticon-close-circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="close-circle"
                  fill="currentColor"
                  fill-rule="evenodd"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
                  />
                </svg>
              </span>
            </button>
          </span>
        </span>
        <span
          class="ant-input-group-addon"
        >
          <button
            class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-icon-only ant-btn-loading ant-input-search-button"
            type="button"
          >
            <span
              class="ant-btn-icon ant-btn-loading-icon"
            >
              <span
                aria-label="loading"
                class="anticon anticon-loading anticon-spin"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="loading"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="0 0 1024 1024"
                  width="1em"
                >
                  <path
                    d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                  />
                </svg>
              </span>
            </span>
          </button>
        </span>
      </span>
    </span>
    <button
      class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-sm ant-btn-loading ant-btn-block"
      type="button"
    >
      <span
        class="ant-btn-icon ant-btn-loading-icon"
      >
        <span
          aria-label="loading"
          class="anticon anticon-loading anticon-spin"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="loading"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
            />
          </svg>
        </span>
      </span>
      <span>
        Моё местоположение
      </span>
    </button>
  </div>
</div>
`;

exports[`WeatherWidget > показывает заметки, прогноз, ошибку и вызывает действия 3`] = `
<div>
  <div
    class="weather-forecast-row"
  >
    <span
      class="ant-typography weather-forecast-date"
    >
      ср
      , 
      23.09
    </span>
    <span
      class="ant-typography weather-forecast-condition"
    >
      <span
        aria-hidden="true"
        class="weather-forecast-emoji"
      >
        ☀️
      </span>
      <span
        class="weather-forecast-label"
      >
        Ясно
      </span>
    </span>
    <span
      class="ant-typography weather-forecast-temp"
    >
      0° / +21°
    </span>
  </div>
</div>
`;

exports[`WeatherWidget > рисует загрузку, пустое состояние и текущую погоду 1`] = `
<div>
  <span
    aria-describedby="id"
    style="display: inline-flex;"
  >
    <button
      aria-label="Загрузка погоды"
      class="ant-btn ant-btn-text ant-btn-color-default ant-btn-variant-text"
      style="color: rgb(255, 255, 255);"
      type="button"
    >
      <div
        aria-busy="true"
        aria-live="polite"
        class="ant-spin ant-spin-sm ant-spin-spinning"
      >
        <span
          class="ant-spin-dot-holder"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </span>
      </div>
    </button>
  </span>
</div>
`;

exports[`WeatherWidget > рисует загрузку, пустое состояние и текущую погоду 2`] = `
<div>
  <button
    aria-label="Погода недоступна"
    class="ant-btn ant-btn-text ant-btn-color-default ant-btn-variant-text"
    style="color: rgb(255, 255, 255);"
    type="button"
  >
    <span>
      Нет данных
    </span>
  </button>
</div>
`;

exports[`WeatherWidget > рисует загрузку, пустое состояние и текущую погоду 3`] = `
<div>
  <span
    aria-describedby="id"
    style="display: inline-flex;"
  >
    <button
      aria-label="Погода: ⛅ +18°, Переменная облачность"
      class="ant-btn ant-btn-text ant-btn-color-default ant-btn-variant-text"
      style="color: rgb(255, 255, 255); height: 40px; padding-inline: 8px;"
      type="button"
    >
      <div
        class="ant-flex"
        style="gap: 8px;"
      >
        <span
          aria-hidden="true"
        >
          ⛅
        </span>
        <span>
          +18°
        </span>
        <span
          class="weather-widget-condition"
        >
          Переменная облачность
        </span>
      </div>
    </button>
  </span>
</div>
`;
